pop up size fixed on mobile

--- a/styles.css
+++ b/styles.css
@@ -573,3 +573,8 @@ li {
   z-index: 999;
 }
 
+@media screen and (max-width: 768px) {
+  .popup-content p {
+    font-size: 3.5vw;
+  }
+}
